# EVCH_OperationsManagement

./: Automated_GA_Heterogenous_Chargers.py  Evaluation.py  Evaluation_RL.py  README.md  RL_config_evaluation.py  RL_main_discrete.py  SC_env.py  SC_storage_env.py  data.py  experience.csv  investment_results_Facility_1_2019-06-03.csv  investment_results_Facility_KoeBogen_2019-06-03.csv  main.py  multi-period_heterogenous-chargers.py  pyproject.toml  requirements.txt  rl_environment.py  rl_pricing_env.py  sac_discrete.py
Cache/: pv_loads.pkl  scaled_baseload.pkl
Environment/: log.py  model.py
Infrastructure/: electric_generator.py  electric_storage.py  ev_charger.py  grid.py  parking_lot.py
Operations/: ChargingAlgorithms.py  IntegratedAlgorithms.py  NonLinearAlgorithms.py  RoutingAlgorithms.py  StorageAlgorithms.py  operator.py  test.py
Planning/: ECIS.py  Scaled_Avg_Hourly_Load.csv  Single_plug.py  Visualization_new.py  benchmark.py  data.py  log.py  multi-period.py  multi-period_heterogenous-chargers.py
Preferences/: EV_user_decision_making.py  vehicle.py
Results/: Monitoring.py
Sizing/: Automated_GA.py  Automated_GA_Heterogenous_Chargers.py  Genetic_algorithm.py  Grid_search.py  ga.py  test.py
Utilities/: ex_ante_visualization.py  sample_prep.py  sim_input_prep.py  sim_input_processing.py  sim_output_processing.py  visualization.py
new_notebooks_EVCH/: 00_ACN_Charging_Data_Analysis.ipynb  00_APCOA_Parking_Data_Analysis.ipynb  00_APCOA_Parking_Data_Raw_Processing.ipynb  00_ArtInvest_Load_Data_Analysis.ipynb  01_Parking+Charging_Data_Blending.ipynb  (+2 more)
(+43 files in other folders)
